# playlist-sync-realtime

./: .gitignore  LICENSE  README.md  app.py  dev-requirements.txt  pyproject.toml  requirements.txt  restart_playlist_sync.sh  run_playlist_sync.sh  stop_playlist_sync.sh
playlist_sync/: __init__.py  app.py  config.py  models.py  storage.py  sync.py
playlist_sync/connectors/: __init__.py  apple_music.py  base.py  spotify.py  youtube_music.py
playlist_sync/web/: server.py
playlist_sync/web/templates/: index.html
tests/: conftest.py  test_app_factory.py  test_config.py  test_connector_apple.py  test_connector_spotify.py  test_connector_youtube.py  test_storage.py  test_sync_manager.py  test_web_app.py
