[tool.poetry]
name = "playlist-sync"
version = "0.1.0"
description = "Low-resource playlist synchronization service for Spotify, Apple Music, and YouTube Music."
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [{ include = "playlist_sync" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
jinja2 = "^3.1.3"
httpx = "^0.27.0"
spotipy = "^2.23.0"
requests-oauthlib = "^1.3.1"
google-auth = "^2.28.0"
google-auth-oauthlib = "^1.2.0"
pydantic = "^2.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
